AG-13783 - fixed cell height with wrapText and without autoHeight

--- a/community-modules/styles/src/internal/base/parts/_common-structural.scss
+++ b/community-modules/styles/src/internal/base/parts/_common-structural.scss
@@ -844,6 +844,7 @@
     }
 
     .ag-cell-wrap-text:not(.ag-cell-auto-height) .ag-cell-wrapper {
+        align-items: normal;
         height: 100%;
         .ag-cell-value {
             height: 100%;
